Consider non-solid borders see-through for background paint location.

Backgrounds must paint under the border when the border is not solid
even if the border color is opaque.

Bug: 898247
Change-Id: I1eed15b9c17b22cd0ddba65073638a1f8a16c30d
Reviewed-on: https://chromium-review.googlesource.com/c/1297173
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602100}
Former-commit-id: 8bdabacf5fad45ba3ece42a2f75df13234a66302